--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
         <div class="menu">
           <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
+            ><svg class="contact-link-icon" width="16" height="12"><use href="./images/icons.svg.svg#icon-envelope-1"></use></svg>info@devstudio.com</a
           >
-          <a href="tel:+48111111111" class="link">+48 111 111 111</a>
+          <a href="tel:+48111111111" class="link"><svg class="contact-link-icon" width="16" height="12"><use href="./images/icons.svg.svg#icon-telefon"></use></svg>+48 111 111 111</a>
         </div>
       </div>
       <div class="first-background">
@@ -75,28 +75,32 @@
          <div class="container">
         <div class="lorem">
         <ul class="list-styling">
-          <li>
+          <li><div class="icon-background">
+            <svg class="des-icon" width="70" height="70"><use href="./images/icons.svg.svg#icon-antenna-1"></use></svg></div>
             <h4 class="text-header">LOREM IPSUM</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li><div class="icon-background">
+             <svg class="des-icon" width="70" height="70"><use href="./images/icons.svg.svg#icon-clock-1"></use></svg></div>
             <h4 class="text-header">LOREM IPSUM</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li><div class="icon-background">
+              <svg class="des-icon" width="70" height="70"><use href="./images/icons.svg.svg#icon-diagram-1"></use></svg></div>
             <h4 class="text-header">LOREM IPSUM</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li><div class="icon-background">
+            <svg class="des-icon" width="70" height="70"><use href="./images/icons.svg.svg#icon-astronaut-1"></use></svg></div>
             <h4 class="text-header">LOREM IPSUM</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
