--- a/index.html
+++ b/index.html
@@ -216,9 +216,24 @@
             </li>
           </ul></div>
         </section>
+        
       </div>
       </div>
       <div class="container">
+        <div class="container">
+        <section class="section">
+          <div class="header-wrapper">
+          <h2 class="picture-header">Nasi klienci</h2>
+        </div>
+ <ul class="list-styling">
+          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-1"></use></svg></div></li>
+          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-2"></use></svg></div></li>
+<li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-3"></use></svg></div></li>
+          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-4"></use></svg></div></li>
+          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-5"></use></svg></div></li>
+          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-6"></use></svg></div></li>
+          </ul>
+        </section></div>
       <footer class="footer">
         
         <div class="logo-footer"
