próba edycji kolorów

--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
                     </div>
                   </figcaption>
                 </div>
+                <ul class="list-styling">
+                  <li><svg class="social-media-icon" width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                </ul>
               </figure>
             </li>
             <li>
@@ -181,6 +187,11 @@
                     Developer
                   </div>
                 </figcaption>
+                 <ul class="list-styling"><li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                </ul>
               </figure>
             </li>
 
@@ -197,6 +208,11 @@
                     <strong class="name-styling">John Doe</strong> Marketing
                   </div>
                 </figcaption>
+                 <ul class="list-styling"><li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                </ul>
               </figure>
             </li>
             <li>
@@ -212,6 +228,11 @@
                     <strong class="name-styling">John Doe</strong> UI Designer
                   </div>
                 </figcaption>
+                 <ul class="list-styling"><li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                </ul>
               </figure>
             </li>
           </ul></div>
