social media icons

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a href="mailto:info@devstudio.com" class="link"
             ><svg class="contact-link-icon" width="16" height="12"><use href="./images/icons.svg.svg#icon-envelope-1"></use></svg>info@devstudio.com</a
           >
-          <a href="tel:+48111111111" class="link"><svg class="contact-link-icon" width="16" height="12"><use href="./images/icons.svg.svg#icon-telefon"></use></svg>+48 111 111 111</a>
+          <a href="tel:+48111111111" class="link"><svg class="contact-link-icon" width="16" height="12"><use href="./images/icons.svg.svg#icon-smartphone"></use></svg>+48 111 111 111</a>
         </div>
       </div>
       <div class="first-background">
@@ -166,10 +166,11 @@
                   </figcaption>
                 </div>
                 <ul class="list-styling">
-                  <li><svg class="social-media-icon" width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                  <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
                 </ul>
               </figure>
             </li>
@@ -187,10 +188,11 @@
                     Developer
                   </div>
                 </figcaption>
-                 <ul class="list-styling"><li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                 <ul class="list-styling">
+                   <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
                 </ul>
               </figure>
             </li>
@@ -208,10 +210,11 @@
                     <strong class="name-styling">John Doe</strong> Marketing
                   </div>
                 </figcaption>
-                 <ul class="list-styling"><li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                 <ul class="list-styling">
+                 <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
                 </ul>
               </figure>
             </li>
@@ -228,10 +231,11 @@
                     <strong class="name-styling">John Doe</strong> UI Designer
                   </div>
                 </figcaption>
-                 <ul class="list-styling"><li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg width="44" height="44"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                 <ul class="list-styling">
+                  <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
+                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
                 </ul>
               </figure>
             </li>
