--- a/index.html
+++ b/index.html
@@ -168,9 +168,12 @@
                 <ul class="list-styling">
                   <li><a href="#" class="link-social"
             ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></a></li>
                 </ul>
               </figure>
             </li>
@@ -189,10 +192,14 @@
                   </div>
                 </figcaption>
                  <ul class="list-styling">
-                   <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                  <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></a></li>
                 </ul>
               </figure>
             </li>
@@ -211,10 +218,14 @@
                   </div>
                 </figcaption>
                  <ul class="list-styling">
-                 <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></a></li>
                 </ul>
               </figure>
             </li>
@@ -232,10 +243,14 @@
                   </div>
                 </figcaption>
                  <ul class="list-styling">
-                  <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></li>
-                <li><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></li>
+                 <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></a></li>
                 </ul>
               </figure>
             </li>
@@ -251,7 +266,7 @@
           <h2 class="picture-header">Nasi klienci</h2>
         </div>
  <ul class="list-styling">
-          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-1"></use></svg></div></li>
+          <li><a href="#" class="link-clients"><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-1"></use></svg></div></a></li>
           <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-2"></use></svg></div></li>
 <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-3"></use></svg></div></li>
           <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-4"></use></svg></div></li>
