--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
         </div>
  <ul class="list-styling">
           <li><a href="#" class="link-clients"><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-1"></use></svg></div></a></li>
-          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-2"></use></svg></div></li>
-<li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-3"></use></svg></div></li>
-          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-4"></use></svg></div></li>
-          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-5"></use></svg></div></li>
-          <li><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-6"></use></svg></div></li>
+          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-2"></use></svg></div></a></li>
+<li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-3"></use></svg></div></a></li>
+          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-4"></use></svg></div></a></li>
+          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-5"></use></svg></div></a></li>
+          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-6"></use></svg></div></a></li>
           </ul>
         </section></div>
       <footer class="footer">
