--- a/index.html
+++ b/index.html
@@ -298,6 +298,13 @@
           </li></div>
         </ul>
         </div>
+        <div>
+          <p class="social-title">DOŁĄCZ DO NAS</p>
+          <ul class="list-styling">
+            <li></li>
+          </ul>
+        </div>
+  
       </footer>
     </main>
   </body>
