--- a/index.html
+++ b/index.html
@@ -266,12 +266,14 @@
           <h2 class="picture-header">Nasi klienci</h2>
         </div>
  <ul class="list-styling">
-          <li><a href="#" class="link-clients"><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-1"></use></svg></div></a></li>
-          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-2"></use></svg></div></a></li>
-<li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-3"></use></svg></div></a></li>
-          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-4"></use></svg></div></a></li>
-          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-5"></use></svg></div></a></li>
-          <li><a href="#" class="link-clients"><div class="clients-icon"></div><div class="clients-icon"><svg width="100" height="100"><use href="./images/icons.svg.svg#icon-client-6"></use></svg></div></a></li>
+          <li class="clients-icon"><a href="#" class="link-clients"><svg width="170" height="92"><use href="./images/icons.svg.svg#icon-client-1"></use></svg></a></li>
+          
+          
+          <li class="clients-icon"><a href="#" class="link-clients"><svg width="170" height="92"><use href="./images/icons.svg.svg#icon-client-2"></use></svg></a></li>
+<li><a href="#" class="link-clients"><div class="clients-icon"><svg width="170" height="92"><use href="./images/icons.svg.svg#icon-client-3"></use></svg></div></a></li>
+          <li class="clients-icon"><a href="#" class="link-clients"><svg width="170" height="92"><use href="./images/icons.svg.svg#icon-client-4"></use></svg></a></li>
+          <li class="clients-icon"><a href="#" class="link-clients"><svg width="170" height="92"><use href="./images/icons.svg.svg#icon-client-5"></use></svg></a></li>
+          <li class="clients-icon"><a href="#" class="link-clients"><svg width="170" height="92"><use href="./images/icons.svg.svg#icon-client-6"></use></svg></a></li>
           </ul>
         </section></div>
       <footer class="footer">
