--- a/index.html
+++ b/index.html
@@ -299,13 +299,21 @@
             >
           </li></div>
         </ul>
-        </div>
         <div>
           <p class="social-title">DOŁĄCZ DO NAS</p>
           <ul class="list-styling">
-            <li></li>
+             <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></a></li>
           </ul>
         </div>
+        </div>
+        
   
       </footer>
     </main>
