--- a/portfolio.html
+++ b/portfolio.html
@@ -40,28 +40,29 @@
   <body>
     <header>
       <div class="container">
-        <div class="wrapper">
-          <nav class="menu-styling">
-            <span>
-              <a href="#" class="logo"
-                ><span>Web</span> <span class="studio-styling">Studio</span></a
-              >
-            </span>
-
-            <ul class="menu" class="list-styling">
-              <li><a href="index.html" class="link">Agencja</a></li>
-              <li><a href="#" class="link">Portfolio</a></li>
-              <li><a href="#" class="link">Kontakt</a></li>
-            </ul>
-          </nav>
-
-          <div class="menu">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+      <div class="wrapper">
+        <nav class="menu-styling">
+          <span>
+            <a href="#" class="logo"
+              ><span>Web</span> <span class="studio-styling">Studio</span></a
             >
-            <a href="tel:+48111111111" class="link">+48 111 111 111</a>
-          </div>
+          </span>
+
+          <ul class="menu" class="list-styling">
+            <li><a href="index.html" class="link">Agencja</a></li>
+            <li><a href="#" class="link">Portfolio</a></li>
+            <li><a href="#" class="link">Kontakt</a></li>
+          </ul>
+        </nav>
+
+        <div class="menu">
+          <a href="mailto:info@devstudio.com" class="link"
+            ><svg class="contact-link-icon" width="16" height="12"><use href="./images/icons.svg.svg#icon-envelope-1"></use></svg>info@devstudio.com</a
+          >
+          <a href="tel:+48111111111" class="link"><svg class="contact-link-icon" width="16" height="12"><use href="./images/icons.svg.svg#icon-smartphone"></use></svg>+48 111 111 111</a>
         </div>
+      </div>
+     
       </div>
     </header>
     <main>
