--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             >
           </li></div>
         </ul>
-        <div class="social ">
+        <div class="social-footer">
           <p class="social-title">DOŁĄCZ DO NAS</p>
           <ul class="list-styling">
              <li><a href="#" class="link-social"
