--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </ul>
         </section></div>
       <footer class="footer">
-        
+        <div class="footer-position">
         <div class="logo-footer"
           ><a href="#" class="logo"
             >Web<div class="studio-styling-second">Studio</div></a
@@ -298,7 +298,7 @@
               >+48 111 111 111</a
             >
           </li></div>
-        </ul>
+        </ul></div>
         <div class="social-footer">
           <p class="social-title">DOŁĄCZ DO NAS</p>
           <ul class="list-styling">
