--- a/portfolio.html
+++ b/portfolio.html
@@ -248,30 +248,45 @@
       </section>
     </main>
     <div class="container">
-      <footer class="footer">
-        <div class="logo-footer">
-          <a href="#" class="logo"
-            >Web
-            <div class="studio-styling-second">Studio</div></a
-          >
-        </div>
+     <footer class="footer">
+        <div class="footer-position">
+        <div class="logo-footer"
+          ><a href="#" class="logo"
+            >Web<div class="studio-styling-second">Studio</div></a
+          ></div
+        >
         <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
-
+       
         <ul class="list-styling">
-          <div class="cont-footer">
-            <li>
-              <a href="mailto:info@example.com" class="contact-footer"
-                >info@example.com</a
-              >
-            </li>
+          <div  class="cont-footer">
+          <li>
+            <a href="mailto:info@example.com" class="contact-footer"
+              >info@example.com</a
+            >
+          </li>
 
-            <li>
-              <a href="tel:+48111111111" class="contact-footer"
-                >+48 111 111 111</a
-              >
-            </li>
-          </div>
-        </ul>
+          <li>
+            <a href="tel:+48111111111" class="contact-footer"
+              >+48 111 111 111</a
+            >
+          </li></div>
+        </ul></div>
+        <div class="social-footer">
+          <p class="social-title">DOŁĄCZ DO NAS</p>
+          <ul class="list-styling">
+             <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></a></li>
+                <li><a href="#" class="link-social"
+            ><svg class="social-media-icon" width="20" height="20"><use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></a></li>
+          </ul>
+        </div>
+        </div>
+        
+  
       </footer>
     </div>
   </body>
